--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
+    <string name="banner_ad_unit_id">ca-app-pub-2447092275221137/2815698401</string>
 
 </resources>
